--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -1,6 +1,11 @@
 <?xml version='1.0'?>
 <fontconfig>
  <match target="font">
+  <edit mode="assign" name="autohint">
+   <bool>false</bool>
+  </edit>
+ </match>
+ <match target="font">
   <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
@@ -10,6 +15,16 @@
    <const>hintslight</const>
   </edit>
  </match>
+ <match target="font">
+  <edit mode="assign" name="rgba">
+   <const>rgb</const>
+  </edit>
+ </match>
  <dir>~/.fonts</dir>
  <dir>~/.local/share/fonts</dir>
+ <match target="font">
+  <edit mode="assign" name="antialias">
+   <bool>true</bool>
+  </edit>
+ </match>
 </fontconfig>
