--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -1,5 +1,6 @@
 # 通用配置
-osc=no
+osd-bar=no
+border=no
 load-scripts=yes
 cursor-autohide-fs-only
 cursor-autohide=1000
@@ -30,7 +31,7 @@ sub-file-paths-append=subtitles
 screenshot-format=webp
 screenshot-tag-colorspace=yes
 screenshot-high-bit-depth=yes
-screenshot-directory="~/Pictures/截图"
+screenshot-directory="~/Pictures/屏幕截图"
 screenshot-template="%F - [%p]v%#01n"
 
 # OSD配置
